--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PhD Student – Your Name</title>
+  <title>PhD Student - Kossi Roland ETSE </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -10,7 +10,7 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      color: #222;
+      color:#222;
       background: #f8f8f8;
     }
     header {
@@ -71,8 +71,8 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>PhD Student in [Discipline] – [University / Laboratory]</p>
+    <h1>Kossi Roland ETSE</h1>
+    <p>PhD Student in Computer Sciences - [UVSQ / DAVID]</p>
   </header>
 
   <nav>
@@ -107,8 +107,8 @@
         Publications:
       </p>
       <ul>
-        <li><strong>[Year]</strong> – [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
-        <li><strong>[Year]</strong> – [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
+        <li><strong>[Year]</strong> - [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
+        <li><strong>[Year]</strong> - [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
       </ul>
     </section>
 
@@ -119,8 +119,8 @@
         <strong>[University]</strong>, including:
       </p>
       <ul>
-        <li>[Course Name] – [Level], [Year]</li>
-        <li>[Course Name] – [Level], [Year]</li>
+        <li>[Course Name] - [Level], [Year]</li>
+        <li>[Course Name] - [Level], [Year]</li>
       </ul>
     </section>
 
@@ -136,7 +136,7 @@
   </main>
 
   <footer>
-    © 2025 Your Name – Built with GitHub Pages
+    © 2025 Your Name - Built with GitHub Pages
   </footer>
 </body>
 </html>
