--- a/index.html
+++ b/index.html
@@ -2,141 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PhD Student - Kossi Roland ETSE </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: "Helvetica", "Arial", sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      color:#222;
-      background: #f8f8f8;
-    }
-    header {
-      background: #2c3e50;
-      color: #fff;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      margin: 0.5rem 0 0;
-    }
-    nav {
-      background: #34495e;
-      text-align: center;
-      padding: 0.5rem;
-    }
-    nav a {
-      color: #fff;
-      margin: 0 1rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
-      background: #fff;
-    }
-    section {
-      margin-bottom: 3rem;
-    }
-    h2 {
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    footer {
-      background: #2c3e50;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-    a {
-      color: #2980b9;
-    }
-  </style>
+  <title>Kossi Roland ETSE — Academic Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Kossi Roland ETSE</h1>
-    <p>PhD Student in Computer Sciences - [UVSQ / DAVID]</p>
+    <p>Phd Student — Computer Science, DAVID, UVSQ</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">About me</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+      </ul>
+    </nav>
   </header>
-
-  <nav>
-    <a href="#presentation">Presentation</a>
-    <a href="#research">Research</a>
-    <a href="#teaching">Teaching</a>
-    <a href="#others">Others</a>
-  </nav>
-
-  <main>
-    <section id="presentation">
-      <h2>Presentation</h2>
-      <p>
-        I am a PhD student at <strong>[University / Institute]</strong> in the 
-        <strong>[Department / Laboratory]</strong>. 
-        My work focuses on [short description of your research topics]. 
-      </p>
-      <p>
-        Contact: <a href="mailto:your.email@university.edu">your.email@university.edu</a>
-      </p>
-    </section>
-
-    <section id="research">
-      <h2>Research</h2>
-      <p>My main research interests include:</p>
-      <ul>
-        <li>[Topic 1]</li>
-        <li>[Topic 2]</li>
-        <li>[Topic 3]</li>
-      </ul>
-      <p>
-        Publications:
-      </p>
-      <ul>
-        <li><strong>[Year]</strong> - [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
-        <li><strong>[Year]</strong> - [Title], [Conference/Journal]. <a href="#">[PDF]</a></li>
-      </ul>
-    </section>
-
-    <section id="teaching">
-      <h2>Teaching</h2>
-      <p>
-        During my PhD, I have been involved in teaching activities at 
-        <strong>[University]</strong>, including:
-      </p>
-      <ul>
-        <li>[Course Name] - [Level], [Year]</li>
-        <li>[Course Name] - [Level], [Year]</li>
-      </ul>
-    </section>
-
-    <section id="others">
-      <h2>Others</h2>
-      <ul>
-        <li><a href="#">CV (PDF)</a></li>
-        <li><a href="#">GitHub</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Google Scholar</a></li>
-      </ul>
-    </section>
-  </main>
-
+  
+  <section id="bio">
+    <img src="images/photo.jpg" alt="Photo of Your Name">
+    <p>
+      Welcome! I am a <strong>[Phd Student]</strong> at 
+      <strong>[UVSQ]</strong>.  
+      My research interests include [keywords / topics].  
+      You can contact me at: <a href="kossi-roland.etse@uvsq.fr">kossi-roland.etse@uvsq.fr</a>.
+    </p>
+  </section>
+  
   <footer>
-    © 2025 Your Name - Built with GitHub Pages
+    <p>&copy; 2025 EKR</p>
   </footer>
 </body>
 </html>
