--- a/index.html
+++ b/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kossi Roland ETSE — Academic Page</title>
+  <title>Kossi Roland ETSE — About me</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <h1>Kossi Roland ETSE</h1>
-    <p>Phd Student — Computer Science, DAVID, UVSQ</p>
-    <nav>
+    <p>Phd Student in Computer Science</p>
+    
+  </header>
+
+  <nav>
       <ul>
         <li><a href="index.html">About me</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </nav>
-  </header>
-  
+
   <section id="bio">
     <img src="images/photo.jpg" alt="Photo of Your Name">
     <p>
-      Welcome! I am a <strong>[Phd Student]</strong> at 
-      <strong>[UVSQ]</strong>.  
-      My research interests include [keywords / topics].  
-      You can contact me at: <a href="kossi-roland.etse@uvsq.fr">kossi-roland.etse@uvsq.fr</a>.
-    </p>
+  I am a <strong>PhD student</strong> in <strong>Computer Science</strong> at the Lab 
+  <a href="https://www.david.uvsq.fr/" target="_blank">DAVID</a> of 
+  <a href="https://www.sciences.uvsq.fr/" target="_blank">Université de Versailles Saint-Quentin-en-Yvelines</a> 
+  under the supervison of  Jean-Michel Fourneau, David Auger and Pierre Coucheney.
+  My PhD title is <strong>"Study of the properties of rotor walks in graphs and their generalizations"</strong>.  
+  You can contact me at: <a href="mailto:kossi-roland.etse@uvsq.fr">kossi-roland.etse@uvsq.fr</a>.
+</p>
+
   </section>
   
   <footer>
