--- a/teaching.html
+++ b/teaching.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name — Teaching</title>
+  <title>Kossi Roland ETSE — Teaching</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Teaching</h1>
-    <nav>
+
+  <nav>
       <ul>
         <li><a href="index.html">About me</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </nav>
-  </header>
 
   <section id="teaching">
     <h2>Courses</h2>
