--- a/research.html
+++ b/research.html
@@ -2,34 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name — Research</title>
+  <title>Kossi Roland ETSE — Research</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Research</h1>
-    <nav>
+
+
+  <nav>
       <ul>
         <li><a href="index.html">About me</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </nav>
-  </header>
+
 
   <section id="research">
     <h2>Research Interests</h2>
-    <p>Write here a few lines about your main research topics.</p>
+    <p>SOC</p>
 
     <h2>Publications</h2>
-    <ul>
+    <p>
+      <a href="https://dblp.org/pid/351/1492.html">Dblp</a> link.
+    </p>
+    
+    <!-- <ul>
       <li>Author(s), <em>Title</em>, Journal/Conference, Year.</li>
       <li>Author(s), <em>Title</em>, Journal/Conference, Year.</li>
-    </ul>
+    </ul> -->
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 EKR</p>
   </footer>
 </body>
 </html>
