--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
 </head>
 
 <body>
+
+  <nav>
+    <a href="index.html">About me</a>
+    <a href="research.html">Research</a>
+    <a href="teaching.html">Teaching</a>
+  </nav>
+  
   <header>
     <h1>Kossi Roland ETSE</h1>
     <p>Phd Student in Computer Science</p>
-    
   </header>
-
-  <nav>
-      <ul>
-        <li><a href="index.html">About me</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-      </ul>
-    </nav>
-
+  
   <section id="bio">
     <img src="images/photo.jpg" alt="Photo of Your Name">
     <p>
