--- a/research.html
+++ b/research.html
@@ -5,21 +5,18 @@
   <title>Kossi Roland ETSE — Research</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-
   <nav>
-      <ul>
-        <li><a href="index.html">About me</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-      </ul>
-    </nav>
+    <a href="index.html">About me</a>
+    <a href="research.html">Research</a>
+    <a href="teaching.html">Teaching</a>
+  </nav>
 
 
   <section id="research">
     <h2>Research Interests</h2>
-    <p>SOC</p>
+    <p>Rotor walk</p>
 
     <h2>Publications</h2>
     <p>
