--- a/index.html
+++ b/index.html
@@ -7,28 +7,39 @@
 </head>
 
 <body>
+ <header>
+    <h1>Kossi Roland ETSE</h1>
+    <p>Phd Student in Computer Science</p>
+</header>
 
   <nav>
     <a href="index.html">About me</a>
     <a href="research.html">Research</a>
     <a href="teaching.html">Teaching</a>
   </nav>
+
   
-  <header>
-    <h1>Kossi Roland ETSE</h1>
-    <p>Phd Student in Computer Science</p>
-  </header>
   
   <section id="bio">
-    <img src="images/photo.jpg" alt="Photo of Your Name">
+    <!-- <img src="images/photo.jpg" alt="name"> -->
     <p>
   I am a <strong>PhD student</strong> in <strong>Computer Science</strong> at the Lab 
   <a href="https://www.david.uvsq.fr/" target="_blank">DAVID</a> of 
   <a href="https://www.sciences.uvsq.fr/" target="_blank">Université de Versailles Saint-Quentin-en-Yvelines</a> 
-  under the supervison of  Jean-Michel Fourneau, David Auger and Pierre Coucheney.
+  under the supervision of <strong></strong> Jean-Michel Fourneau, David Auger</strong> 
+  and <strong>Pierre Coucheney</strong>.
+  </p>
+
+  <p>
   My PhD title is <strong>"Study of the properties of rotor walks in graphs and their generalizations"</strong>.  
-  You can contact me at: <a href="mailto:kossi-roland.etse@uvsq.fr">kossi-roland.etse@uvsq.fr</a>.
-</p>
+  </p>
+
+  <p>
+  You can contact me at: 
+  <pre>
+  <a href="mailto:kossi-roland.etse@uvsq.fr">kossi-roland.etse@uvsq.fr</a>
+  </pre>
+  </p>
 
   </section>
   
