--- a/teaching.html
+++ b/teaching.html
@@ -5,28 +5,30 @@
   <title>Kossi Roland ETSE — Teaching</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
   <nav>
-      <ul>
-        <li><a href="index.html">About me</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-      </ul>
-    </nav>
+    <a href="index.html">About me</a>
+    <a href="research.html">Research</a>
+    <a href="teaching.html">Teaching</a>
+  </nav>
+
 
   <section id="teaching">
-    <h2>Courses</h2>
+  <h2>Teaching</h2>
+  <p>Tutorials for the following courses in the Computer Science Bachelor's program at the Faculty of Science, UVSQ:
+  </p>
     <ul>
-      <li>Course Name (Semester, Year) — Short description.</li>
-      <li>Course Name (Semester, Year) — Short description.</li>
-    </ul>
+    <li>Computer Science Fundamentals I - Introduction to Python, L1, UVSQ (2023-2024,2024-2025)</li>
+    <li>Cryptography, L3, UVSQ (2023-2024)</li>
+    <li>Theory of Languages and Compilation, L3, UVSQ (2024-2025)</li>
+    <li>System Programming, L3, UVSQ (2025-2026)</li>
+  </ul>
+</section>
 
-    
-  </section>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 EKR</p>
   </footer>
 </body>
 </html>
