--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   I am a <strong>PhD student</strong> in <strong>Computer Science</strong> at the Lab 
   <a href="https://www.david.uvsq.fr/" target="_blank">DAVID</a> of 
   <a href="https://www.sciences.uvsq.fr/" target="_blank">Université de Versailles Saint-Quentin-en-Yvelines</a> 
-  under the supervision of <strong></strong> Jean-Michel Fourneau, David Auger</strong> 
+  under the supervision of <strong>Jean-Michel Fourneau, David Auger</strong> 
   and <strong>Pierre Coucheney</strong>.
   </p>
 
