--- a/teaching.html
+++ b/teaching.html
@@ -19,10 +19,10 @@
   <p>Tutorials for the following courses in the Computer Science Bachelor's program at the Faculty of Science, UVSQ:
   </p>
     <ul>
-    <li>Computer Science Fundamentals I - Introduction to Python, L1, UVSQ (2023-2024,2024-2025)</li>
-    <li>Cryptography, L3, UVSQ (2023-2024)</li>
-    <li>Theory of Languages and Compilation, L3, UVSQ (2024-2025)</li>
-    <li>System Programming, L3, UVSQ (2025-2026)</li>
+    <li>Computer Science Fundamentals I - Introduction to Python, L1 (2023-2024,2024-2025)</li>
+    <li>Cryptography, L3 (2023-2024)</li>
+    <li>Theory of Languages and Compilation, L3 (2024-2025)</li>
+    <li>System Programming, L3 (2025-2026)</li>
   </ul>
 </section>
 
